SPA constructioning. with ui-router

--- a/src/main/resources/static/global/css/common.css
+++ b/src/main/resources/static/global/css/common.css
@@ -1,10 +1,3 @@
-/*kingland logo in top*/
-#kinglandlogo {
-	margin-left: 150px;
-	width: 240px;
-	height: 58px;
-}
-
 /*EroroMsg of validate*/
 .errorMsg {
 	white-space: nowrap;
@@ -46,6 +39,6 @@
 	margin-right: 10px;
 }
 
-body{
+/*body{
 	font-family: Helvetica Neue,Helvetica,PingFang SC,Hiragino Sans GB,Microsoft YaHei,Noto Sans CJK SC,WenQuanYi Micro Hei,Arial,sans-serif;!important;
-}
+}*/
