--- a/src/main/resources/static/entrance/infomation-view/infomation-view.css
+++ b/src/main/resources/static/entrance/infomation-view/infomation-view.css
@@ -1,32 +1,40 @@
+.infoview{
+	padding-bottom: 20%;
+}
+
+.infoview table{
+	color: black;
+}
+
+.infoview .editBtn{
+	margin-top: 10%;
+}
+
 /*****Buttons*****/
 
-.btn-primary{
+.infoview .btn-primary{
 	color:#fff;
 	background-color:#4ea8f5;
 	border-color:#4ea8f5;
 	border-radius: 15px;
 }
 
-.btn-primary.active,.btn-primary.focus,.btn-primary:active,.btn-primary:focus,.btn-primary:hover,.open>.dropdown-toggle.btn-primary{
+.infoview .btn-primary.active,.btn-primary.focus,.btn-primary:active,.btn-primary:focus,.btn-primary:hover,.open>.dropdown-toggle.btn-primary{
 	color:#fff;
 	background-color:#2c8ee3;
 	border-color:#2c8ee3
 }
 
-.btn-primary.active,.btn-primary:active,.open>.dropdown-toggle.btn-primary{
-	background-image:none
-}
-
-.btn-primary.disabled,.btn-primary.disabled.active,.btn-primary.disabled.focus,.btn-primary.disabled:active,.btn-primary.disabled:focus,.btn-primary.disabled:hover,.btn-primary[disabled],.btn-primary[disabled].active,.btn-primary[disabled].focus,.btn-primary[disabled]:active,.btn-primary[disabled]:focus,.btn-primary[disabled]:hover,fieldset[disabled] .btn-primary,fieldset[disabled] .btn-primary.active,fieldset[disabled] .btn-primary.focus,fieldset[disabled] .btn-primary:active,fieldset[disabled] .btn-primary:focus,fieldset[disabled] .btn-primary:hover{
+.infoview .btn-primary.disabled,.btn-primary.disabled.active,.btn-primary.disabled.focus,.btn-primary.disabled:active,.btn-primary.disabled:focus,.btn-primary.disabled:hover,.btn-primary[disabled],.btn-primary[disabled].active,.btn-primary[disabled].focus,.btn-primary[disabled]:active,.btn-primary[disabled]:focus,.btn-primary[disabled]:hover,fieldset[disabled] .btn-primary,fieldset[disabled] .btn-primary.active,fieldset[disabled] .btn-primary.focus,fieldset[disabled] .btn-primary:active,fieldset[disabled] .btn-primary:focus,fieldset[disabled] .btn-primary:hover{
 	background-color:#4ea8f5;
 	border-color:#4ea8f5
 }
 
-.btn-primary .badge{
+.infoview .btn-primary .badge{
 	color:#337ab7;
 	background-color:#fff
 }
 
-.table-hover > tbody > tr:hover {
+.infoview .table-hover > tbody > tr:hover {
     background-color: #f6d365;;
 }
