Add columns on teacher/student table and mappers. Complete info-view page's function.

--- a/src/main/resources/static/global/css/common.css
+++ b/src/main/resources/static/global/css/common.css
@@ -39,6 +39,13 @@
 	margin-right: 10px;
 }
 
+.error-display {
+	color: #f77062;
+}
+
+.correct-display {
+	color: #00FF00;
+}
 /*body{
 	font-family: Helvetica Neue,Helvetica,PingFang SC,Hiragino Sans GB,Microsoft YaHei,Noto Sans CJK SC,WenQuanYi Micro Hei,Arial,sans-serif;!important;
 }*/
